# Python-Be-AI-Amalitech

./: .gitignore
Module1/LAB1/Employee-Payroll-Tracker/: README.md  pyproject.toml  pyrightconfig.json
Module1/LAB1/Employee-Payroll-Tracker/docs/: sprint-0.md  sprint-1.md  sprint-2.md
Module1/LAB1/Employee-Payroll-Tracker/src/employee_payroll_tracker/: __init__.py  employe.py  logger.py  main.py  payroll.py  util.py
Module1/LAB2/Library-Inventory/: README.md  pyproject.toml
Module1/LAB2/Library-Inventory/src/data/: library.json
Module1/LAB2/Library-Inventory/src/library_inventory/: author.py  book.py  borrower.py  main.py  utils.py
Module1/LAB3/Vehicle-Rental/: README.md  pyproject.toml
Module1/LAB3/Vehicle-Rental/src/vehicle_rental/: main.py
Module1/LAB3/Vehicle-Rental/src/vehicle_rental/core/: __init__.py  vehicle.py
Module1/LAB3/Vehicle-Rental/src/vehicle_rental/modules/: __init__.py  bike.py  car.py  truck.py
Module1/LAB3/Vehicle-Rental/src/vehicle_rental/services/: __init__.py  pricing.py  princing.py  rental_service.py
Module2/TDD-Based-Weather-API/: .pre-commit-config.yaml  documentation.md  pytest.ini  requirements.txt
Module2/TDD-Based-Weather-API /: .pre-commit-config.yaml  .ruff.toml  README.md  mypy.ini  pyproject.toml
Module2/TDD-Based-Weather-API /app/: exceptions.py  main.py  providers.py  service.py  test_api.py
Module2/TDD-Based-Weather-API /tests/: conftest.py  test_api.py  test_exceptions.py  test_logger.py  test_models.py  test_provider.py  test_service.py
Module2/TDD-Based-Weather-API/app/: exceptions.py  logger.py  main.py  mock_provider.py  models.py  service.py
Module2/TDD-Based-Weather-API/tests/: conftest.py  test_service.py
Module2/secure-auth-service/: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
Module2/secure-auth-service/.github/workflows/: ci.yml
Module2/secure-auth-service/app/: __init__.py  exceptions.py  logger.py  models.py
Module2/secure-auth-service/app/interfaces/: password_hasher.py  user_repository.py
Module2/secure-auth-service/app/repositories/: in_memory_repository.py
Module2/secure-auth-service/app/security/: bcrypt_hasher.py
Module2/secure-auth-service/app/services/: user_service.py
Module2/secure-auth-service/tests/: __init__.py  test_hasher.py  test_logger.py  test_login.py  test_password_policy.py  test_registration.py  test_repository copy.py  test_service_exceptions.py
