[tool.poetry]
name = "weather-api-stub"
version = "0.1.0"
description = "TDD-Based Weather API Service Stub"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
black = "^24.0.0"
ruff = "^0.3.0"
mypy = "^1.9.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["N802", "N803", "N806"]
"app/main.py" = ["B008"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_unused_configs = true
disallow_any_unimported = true
disallow_subclassing_any = true
disallow_untyped_defs = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_untyped_calls = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --strict-markers --cov=app --cov-report=term-missing --cov-fail-under=100"
